js/src/tests/test262/language/import/import-defer/errors/get-other-while-dep-evaluating-async/dep-1-tla_FIXTURE.js
import
{
resolveFirst
resolveThird
second
}
from
"
.
/
promises_FIXTURE
.
js
"
;
import
"
.
/
dep
-
1
.
1_FIXTURE
.
js
"
await
Promise
.
resolve
(
)
;
resolveFirst
(
)
;
await
second
;
resolveThird
(
)
;
